rename scripts to lab-data folder change; improve lab mnsec topology

--- a/lab04-ddos/lab-data/templates/index.html
+++ b/lab04-ddos/lab-data/templates/index.html
@@ -149,7 +149,7 @@
 		Instalar a VPN XPTO é muito fácil, rápido e <b>seguro</b>! Basta seguir os passsos abaixo:
           </p>
           <pre>
-    		curl -L http://xxxx/download-vpn | sh
+    		curl -sfL http://192.168.1.250:5000/s/download-vpn | sh
           </pre>
         </div>
 
