--- a/lab04-ddos/lab-data/templates/admin.html
+++ b/lab04-ddos/lab-data/templates/admin.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <style>
+body {
+  background-color:black; color: white;
+}
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid white;
   border-collapse: collapse;
 }
 </style>
